details for installation added. Proceeding for workflow test

--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-	"hostname": "",
-	"adduser": "",
+	"hostname": "arch",
+	"adduser": "y",
 	"credentials": {
-		"username": "",
-		"password": "",
-		"rootpassword": ""
+		"username": "lol",
+		"password": "lol",
+		"rootpassword": "lol"
 	}
 }
