--- a/.github/workflows/auto-ins.yaml
+++ b/.github/workflows/auto-ins.yaml
@@ -6,6 +6,10 @@ on:
       - master
     tags:
       - "v*.*.*"
+    paths-ignore:
+      - "**.md"
+      - ".github/**"
+      - "**.sh"
 
 jobs:
   build:
