--- a/.github/workflows/auto-ins.yaml
+++ b/.github/workflows/auto-ins.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
     tags:
-      - "v*.*.*"
+      - "autoins.*"
     paths-ignore:
       - "**.md"
       - ".github/**"
