--- a/.github/workflows/auto-ins.yaml
+++ b/.github/workflows/auto-ins.yaml
@@ -26,7 +26,7 @@ jobs:
           name: unattended arch installation iso
           path: /tmp/auto-ins/out/*.iso
       - uses: softprops/action-gh-release@v2
-        if: github.ref_type == 'tag'
+        # if: github.ref_type == 'tag'
         with:
           files: /tmp/auto-ins/out/*.iso
         env: 
