--- a/config.json
+++ b/config.json
@@ -2,8 +2,8 @@
 	"hostname": "arch",
 	"adduser": "y",
 	"credentials": {
-		"username": "lol",
-		"password": "lol",
-		"rootpassword": "lol"
+		"username": "user",
+		"password": "vihs",
+		"rootpassword": "vihs"
 	}
 }
