Releasing v1 of the repo and New ISO with config form config.json

--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
 	"adduser": "y",
 	"credentials": {
 		"username": "user",
-		"password": "vihs",
-		"rootpassword": "vihs"
+		"password": "resu",
+		"rootpassword": "toor"
 	}
 }
